@@ -12,9 +12,9 @@ cImageServer::~cImageServer() {
 scrapType cImageServer::GetScrapType(const cEvent *event) {
     scrapType type = scrapNone;
     int duration = event->Duration() / 60;
-    if ((duration > 19) && (duration < 65)) {
+    if ((duration > 9) && (duration <= 75)) {
         type = scrapSeries;
-    } else if (duration > 80) {
+    } else if (duration > 75) {
         type = scrapMovie;
     }
     return type;
